--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -11,3 +11,4 @@
 @using Masa.Dcc.Web.Admin.Rcl.Data.Base
 @using Masa.Dcc.Web.Admin.Rcl.Components
 @using Masa.BuildingBlocks.BasicAbility.Pm.Model
+@using Masa.Stack.Components
